--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 
 .left p {
   margin: 5px 0;
+  width: 400px;
   text-align: left;
 }
 
@@ -111,6 +112,42 @@ a:link , a:visited, a:hover, a:active {
   width: 500px;
   text-align: right;
   font-weight: bold;
+}
+
+.section-4 {
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-4 {
+  width: 650px;
+  height: 75px;
+  background-color: #3882F6;
+  padding: 20px 100px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.left-4 {
+  color: white;
+}
+
+.right-4 button {
+  color: white;
+  background-color: #3882F6;
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 5px 20px;
+  font-weight: bold;
+}
+
+.lower-stuff {
+  font-size: 12px;
 }
 
 
